--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,19 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ],
+  "tabWidth": 2,
+  "semi": true,
+  "jsxSingleQuote": true,
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
 }
