--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "type": "module",
   "dependencies": {
     "firebase": "^10.12.0",
+    "firebase-admin": "^12.1.0",
     "zod": "^3.23.8"
   }
 }
