--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "firebase": "^10.12.0",
     "firebase-admin": "^12.1.0",
     "zod": "^3.23.8"
-  }
+  },
+  "packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2"
 }
