--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@octokit/openapi-types": "^22.2.0",
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
@@ -40,5 +41,10 @@
     "vite": "^5.0.3",
     "vitest": "^1.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "firebase": "^10.12.0",
+    "firebase-admin": "^12.1.0",
+    "zod": "^3.23.8"
+  }
 }
