--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
+    "format-cached": "prettier --write --cache  .",
     "test:integration": "playwright test",
     "test:unit": "vitest",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md,html}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@octokit/openapi-types": "^22.2.0",
@@ -29,6 +35,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.4",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.1.2",
