--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md,html}": [
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   },
   "devDependencies": {
