--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md,html}": [
-      "prettier --write",
-      "eslint --fix"
+      "prettier --write"
     ]
   },
   "devDependencies": {
