--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,22 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Setup Node.js and pnpm
+      uses: pnpm/action-setup@v3
       with:
-        node-version: '20'
+        version: 8
+
+    - name: Use Node.js 20
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20
+        cache: 'pnpm'
 
     - name: Install dependencies
       run: pnpm install
 
     - name: Run linters
-      run: pnpm run lint
+      run: pnpm lint
     
     - name: Run tests
-      run: pnpm run test:unit
+      run: pnpm test:unit
