--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
+    "lint": "eslint --quiet .",
     "format": "prettier --write .",
     "format-cached": "prettier --write --cache  .",
     "test:integration": "playwright test",
